2006-02-13  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.5.91
	* NEWS : Updated

2006-02-13  Chenthill Palanisamy  <pchenthill@novell.com> 

	* calendar/e-cal-backend-exchange.c: (match_object): Check for the
	presence of the icalcomp before cloning it.
	Fixes #330663. 

2006-02-13  Sankar P  <psankar@novell.com>

	* Committing on behalf of Arunprakash <arunp@novell.com>
	
	* camel/camel-exchange-store.c (stub_notification) : Added code to
	update the readonly flag of the camel folder.
	* mail/mail-stub-exchange.c (folder_update_linestatus) : Notifies
	the readonly flag change of the folder to camel stub.
	* camel/camel-stub-constants.h : Added the enumeration value 
	CAMEL_STUB_RETVAL_FOLDER_SET_READONLY

	Fixes #311017.

2006-02-13  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c (exchange_conf_entries[]): Added
	mnemonics for checkspin and text entry items.
	Fixes #330504.

2006-02-13  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c (exchange_conf_entries[]): Added
	mnemonics for checkbox entries in receive options page.
	See #330504.

2006-02-10  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes two crashes.
	Fixes #330640
	* calendar/e-cal-backend-exchange-calendar.c: 
	(modify_object_with_href): clone ecomp->icomp while adding it
	to the VCalendar.
	* calendar/e-cal-backend-exchange.c: (get_ldap_attribute):
	Check if the argument passed is valid before setting the value.

2006-02-09  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c (proppatch_address): Not 
	freeing address value, which causes memory corruption. Fixes #330224.

	* calendar/e-cal-backend-exchange.c (set_mode): Removed unused 
	variables.
	(get_attachment)(build_msg)(finalize): Fixed memory leaks.
	See #329251.

2006-02-07  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c (proppatch_date): Handling the
	case when users unsets the b'day and anniversay dates set before.